# fcitx-simple

./: .gitignore  CMakeLists.txt  README
po/: CMakeLists.txt  fcitx-simple.pot
src/: CMakeLists.txt  fcitx-simple-frontend.fxaddon  fcitx-simple-module.fxaddon  fcitx-simple-ui.conf.in  fcitx-simple-ui.fxaddon  simple-api.c  simple-api.cpp  simple-api.h  simple-common.c  simple-common.h  simple-frontend.c  simple-module.c  simple-ui.c  simple.h
testbed/: CMakeLists.txt  main.c
